# CodeSentinel

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  PHASE3_COMPLETION_REPORT.md  PHASE3_IMPLEMENTATION.md  PHASE3_SUMMARY.txt  README.md  SECURITY.md  SPONSORS.md  TESTING_REPORT.md  deepTest.md  phase2-finalization.md  projectBrief.md  pyproject.toml  run-gui-stack.sh  setup-gui.sh  update_license_headers.sh
.github/: FUNDING.yml  copilot-instructions.md
CodeSentinel/: README.md
docs/: ARCHITECTURE.md  GUI_DEVELOPMENT.md  README.md  api-freeze-spec.md  phase1-spec.md  phase2-finalization.md  phase2-spec.md  phase2.6-validation-report.md  phase2.7-rule-pack-design.md  rule-hardening-notes.md
docs/design/: phase2.6-gap-analysis.md
docs/examples/: sample_json_report.json  sample_markdown_report.md
docs/gui/: FRONTEND_ACCESS_DIAGNOSIS.md  requirements-gui.md
docs/guides/: QUICK_START.md  dogfooding-experiment-plan.md
docs/specs/: phase1-spec.md  phase3-spec.md
gui/: .eslintrc.json  .gitignore  README.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
gui/scripts/: run-gui-stack.sh  setup-gui.sh
gui/src/: App.css  App.tsx  index.css
gui/src/components/: SeverityBadge.tsx
gui/src/pages/: Dashboard.css  Dashboard.tsx  ScanResults.css  ScanResults.tsx
gui/src/services/: api.ts
gui/src/types/: index.ts
memory-bank/: activeContext.md  decisionLog.md  productContext.md  progress.md  systemPatterns.md
sample-project/: README.md  app.py  config.json
src/sentinel/: __init__.py
src/sentinel/api/: __init__.py  config_manager.py  events.py  fastapi_bridge.py  models.py  scan_service.py
src/sentinel/cli/: __init__.py  main.py
src/sentinel/llm/: __init__.py  cache.py  explainer.py  provider.py  safety.py  validation.py
src/sentinel/llm/prompts/: README.md  cwe_mapping.json  cwe_mapping.txt  explanation.json  explanation.txt  remediation.json  remediation.txt  severity_justification.json  severity_justification.txt
src/sentinel/reporting/: __init__.py  json_report.py  markdown.py
src/sentinel/rules/: __init__.py  base.py  configs.py  severity.py  token_types.py
src/sentinel/rules/docker/: README.md  __init__.py
src/sentinel/rules/gh_actions/: README.md  __init__.py
src/sentinel/rules/js_supply_chain/: README.md  __init__.py
src/sentinel/rules/terraform/: __init__.py
src/sentinel/scanner/: __init__.py  engine.py  walker.py
src/sentinel/utils/: __init__.py  entropy.py  filetypes.py  parsers.py  patterns.py
test-data/: app.py
test-data/sample-project/: app.py  config.js  config.yaml  credentials.env  private_key.pem
tests/integration/: __init__.py  test_cli_scan.py  test_gui_fastapi_bridge.py  test_scan_service_pipeline.py
tests/unit/: __init__.py  test_ai_batching.py  test_ai_cache.py  test_ai_provider_aware.py  test_ai_safety.py  test_ai_validation.py  test_config_manager.py  test_config_rules.py  test_deduplication.py  test_docker_rules.py  test_dogfood_runner.py  test_engine.py  test_entropy_tuning.py  test_filetypes.py  test_gh_actions_rules.py  test_js_supply_chain_rules.py  test_json_report.py  test_llm_bootstrap.py  test_markdown_report.py  test_rule_collision_resolution.py  test_rule_engine.py  test_rule_export_patterns.py  test_rule_validation.py  test_scan_service_api.py  test_secrets_rules.py  test_severity.py  test_terraform_rules.py  test_token_types.py  test_walker.py
tests/unit/test_rules/: test_empty_rule.py  test_error_rule.py  test_simple_rule.py
tools/: __init__.py  dogfood_runner.py  dogfood_runner_design.md
