# CodeSentinel Project Configuration
#
# © 2025 Andrei Antonescu. All rights reserved.
# Proprietary – not licensed for public redistribution.

[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "codesentinel"
version = "0.2.0"
description = "Local-first security scanner for secrets, configurations, and code hygiene."
readme = "README.md"
authors = [
    {name = "Andrei Antonescu", email = "antonesc@sheridancollege.ca"},
]
license = {text = "Proprietary"}
keywords = ["security", "scanner", "secrets", "cli", "local-first"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: Other/Proprietary License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Security",
    "Topic :: Software Development :: Quality Assurance",
]

dependencies = [
    # Phase 1 is dependency-free - no external runtime dependencies
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "mypy>=1.0.0",
    "flake8>=6.0.0",
]

[project.urls]
Homepage = "https://github.com/ThatOneRomanian/codesentinel"
Documentation = "https://docs.codesentinel.dev"
Repository = "https://github.com/ThatOneRomanian/codesentinel"
Issues = "https://github.com/ThatOneRomanian/codesentinel/issues"

[project.scripts]
codesentinel = "sentinel.cli.main:main"

[tool.setuptools.packages.find]
where = ["src"]
include = ["sentinel*"]

[tool.setuptools.package-data]
"*" = ["*.md", "*.txt", "*.yaml", "*.yml"]

[tool.black]
line-length = 88
target-version = ['py38']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 88

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = [
    "--strict-markers",
    "--strict-config",
    "--cov=sentinel",
    "--cov-report=term-missing",
    "--cov-report=html",
]
markers = [
    "unit: unit tests",
    "integration: integration tests",
    "slow: slow running tests",
]